--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,6 @@ body {
   left: 0;
   top: 54px;
   padding-bottom: 8px;
-  content: "";
   filter: drop-shadow(0px 8px 16px rgba(45, 52, 64, 0.12));
   background: #fcfcfc;
   border-radius: 4px;
@@ -192,6 +191,11 @@ body {
   margin-right: 16px;
 }
 
+.logo {
+  max-width: 100%;
+  object-fit: contain;
+}
+
 .navigation-logo:hover {
   background: none;
 }
@@ -228,7 +232,8 @@ body {
 .navigation-phone:focus {
   border: 2px solid #2d3440;
   padding: 0;
-  margin-top: 16px;
+  margin-top: 15px;
+  padding-right: 1px;
   border-radius: 26px;
 }
 
@@ -262,7 +267,11 @@ body {
   background-color: rgba(252, 252, 252, 1);
 }
 
-.navigation-btn:active .form-search-active {
+.form-search-active {
+  display: none;
+}
+
+.navigation-btn:focus .form-search-active {
   display: block;
 }
 
@@ -272,19 +281,15 @@ body {
   padding: 2px 8px;
 }
 
-.form-search-active {
-  display: none;
-}
-
 .form-search {
   position: absolute;
   box-sizing: border-box;
   top: 52px;
   left: -316px;
-  content: "";
   padding: 24px 16px;
   background: #fcfcfc;
   color: #b9b9b9;
+  z-index: 1;
   border-radius: 4px;
 }
 
@@ -384,7 +389,6 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .basket-icon {
   position: absolute;
-  content: "";
   top: 8px;
   left: 17px;
   fill: #2d3440;
@@ -397,7 +401,6 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 .navigation-basket-empty {
   display: none;
   position: absolute;
-  content: "";
   right: 0;
   top: 52px;
   width: 288px;
@@ -429,7 +432,6 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   box-sizing: border-box;
   background: #fcfcfc;
   border-radius: 4px;
-  content: "";
 }
 
 .login-title {
@@ -556,6 +558,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   border: 4px solid rgba(252, 252, 252, 0.4);
   box-shadow: 0px 4px 12px 0px rgba(45, 52, 64, 0.1);
   border-radius: 26px;
+  outline: none;
 }
 
 .btn-white:hover {
@@ -593,6 +596,11 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   flex-wrap: wrap;
 }
 
+.slider-picture-icecream {
+  max-width: 100%;
+  object-fit: contain;
+}
+
 .picture-main {
   display: block;
   position: relative;
@@ -612,7 +620,6 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .slider-button {
   position: absolute;
-  content: "";
   width: 38px;
   height: 38px;
   top: 50%;
@@ -622,6 +629,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   border-radius: 26px;
   background-color: rgba(252, 252, 252, 0.3);
   cursor: pointer;
+  outline: none;
 }
 
 .slider-button:hover {
@@ -695,6 +703,8 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .picture-second .slider-image-small,
 .picture-third .slider-image-small {
+  max-width: 100%;
+  object-fit: contain;
   margin-top: 183px;
 }
 
@@ -729,6 +739,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   border-radius: 50%;
   cursor: pointer;
   background-color: #fcfcfc;
+  outline: none;
   opacity: 0.3;
 }
 
@@ -784,6 +795,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   height: 28px;
   box-sizing: border-box;
   border-radius: 50%;
+  outline: none;
   background-repeat: no-repeat;
   background-clip: padding-box;
 }
@@ -904,12 +916,16 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .offers-raspberry-image {
   display: block;
+  max-width: 100%;
+  object-fit: contain;
   margin-top: 28px;
   margin-right: 15px;
 }
 
 .offers-marshmallow-image {
   display: block;
+  max-width: 100%;
+  object-fit: contain;
   margin-right: 7px;
   margin-top: 19px;
 }
@@ -968,7 +984,8 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .product-image {
   position: absolute;
-  content: "";
+  max-width: 100%;
+  object-fit: contain;
   top: -51px;
   left: 50%;
   margin-left: -84px;
@@ -1059,7 +1076,6 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .basket-buy-icon {
   position: absolute;
-  content: "";
   top: 50%;
   left: 50%;
   margin-top: -7px;
@@ -1280,6 +1296,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   border: 4px solid rgba(255, 47, 100, 0.3);
   box-shadow: 0px 4px 12px rgba(45, 52, 64, 0.1);
   border-radius: 26px;
+  outline: none;
   background-clip: padding-box;
 }
 
@@ -1395,6 +1412,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   margin-left: 6px;
   border: none;
   cursor: pointer;
+  outline: none;
   background-color: transparent;
   background-image: url(../img/info.svg);
   background-repeat: no-repeat;
@@ -1407,7 +1425,6 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   position: absolute;
   margin: 0;
   padding: 10px 8px;
-  content: "";
   left: 19px;
   top: -10px;
   background-color: #fcfcfc;
@@ -1490,6 +1507,10 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   margin-left: -3px;
 }
 
+.contacts-btn:focus {
+  padding: 15px 34px;
+}
+
 .page-footer {
   margin-bottom: 48px;
 }
@@ -1552,6 +1573,8 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 }
 
 .footer-logo-htmlacademy {
+  max-width: 100%;
+  object-fit: contain;
   margin-bottom: 9px;
 }
 
@@ -1773,6 +1796,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   background-color: #fcfcfc;
   border: 6px solid #2d3440;
   border-radius: 50%;
+  outline: none;
   cursor: pointer;
 }
 
@@ -1898,8 +1922,8 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .control-input[type="radio"]:checked + .control-mark::before {
   position: absolute;
-  top: 4px;
-  left: 4px;
+  top: 3.6px;
+  left: 3.8px;
   width: 6px;
   height: 6px;
   border-radius: 50%;
@@ -2203,6 +2227,8 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 }
 
 .basket-image {
+  max-width: 100%;
+  object-fit: contain;
   margin-right: 16px;
 }
 
