--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
 .navigation-list {
   display: flex;
   flex-wrap: wrap;
-  max-width: 600px;
+  max-width: 585px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -271,7 +271,7 @@ body {
   display: none;
 }
 
-.navigation-btn:focus .form-search-active {
+.navigation-item-search:focus-within .form-search-active {
   display: block;
 }
 
@@ -1783,6 +1783,8 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .range-bar {
   position: absolute;
+  left: 32px;
+  width: 72px;
   height: 2px;
   background-color: rgba(86, 92, 102, 1);
 }
@@ -1856,7 +1858,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 }
 
 .range-input {
-  width: 30px;
+  width: 32px;
   padding: 0 2px;
   font: inherit;
   text-align: center;
@@ -1875,10 +1877,6 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   padding-bottom: 76px;
   border-bottom: 1px solid rgba(252, 252, 252, 0.3);
   margin-bottom: 48px;
-}
-
-.sorting {
-  margin-bottom: 97px;
 }
 
 .sorting-type-list {
@@ -1974,6 +1972,10 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 16px;
+}
+
+.sorting-wrapper-margin {
+  margin-bottom: 97px;
 }
 
 .sorting-type {
@@ -2089,6 +2091,7 @@ input[type="search"i]::-webkit-search-cancel-button:hover {
 
 .pagination-show-more {
   cursor: pointer;
+  max-width: 190px;
   font-family: "Inter", sans-serif;
   font-size: 16px;
   line-height: 20px;
